html checker durchgeführt

--- a/selina.html
+++ b/selina.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/html">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Sparksite</title>
 
     <!-- CSS  -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-    <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+    <link href="css/materialize.css" type="text/css" rel="stylesheet" media="all">
+    <link href="css/style.css" type="text/css" rel="stylesheet" media="all">
 
 </head>
 <body>
-<nav class="nav-bar" role="navigation">
+<nav class="nav-bar">
     <div class="nav-wrapper">
         <a id="logo-container" href="index.html" class="brand-logo">
             <img src="assets/sparksite_logo.svg" alt="Sparksite Logo">
@@ -41,7 +41,7 @@
 <section class="profil">
 
     <h1 class="center">Selina Lanz</h1>
-    <img src="assets/selina/Profilbild.JPG" alt="Profilbild" class="responsive-img"/>
+    <img src="assets/selina/Profilbild.JPG" alt="Profilbild" class="responsive-img">
     <h5 class="center">Exploring creativity, innovation, and new horizons one step at a time!</h5>
     <p class="light">
         I'm a 24-year-old Bachelor’s student in iCompetence at the FHNW in Brugg.
@@ -118,7 +118,7 @@
 <section class="education">
     <h2>EDUCATION</h2>
     <div class="education-item">
-        <img src="assets/sublogo.svg" alt="Sparksite Logo"/>
+        <img src="assets/sublogo.svg" alt="Sparksite Logo">
         <span>23</span>
         <div class="education-text">
             <p class="course-name">iCompetence</p>
@@ -126,7 +126,7 @@
         </div>
     </div>
     <div class="education-item">
-        <img src="assets/sublogo.svg" alt="Sparksite Logo"/>
+        <img src="assets/sublogo.svg" alt="Sparksite Logo">
         <span>22&nbsp;-<br>23</span>
         <div class="education-text">
             <p class="course-name">Professional Maturity</p>
@@ -139,7 +139,7 @@
 <section class="experience">
     <h2>EXPERIENCE</h2>
     <div class="experience-item">
-        <img src="assets/sublogo.svg" alt="Sparksite Logo"/>
+        <img src="assets/sublogo.svg" alt="Sparksite Logo">
         <span>18&nbsp;-<br>20</span>
         <div class="experience-text">
             <p class="job-titel">Office clerk</p>
@@ -152,21 +152,21 @@
 <section class="languages">
     <h2>LANGUAGE</h2>
     <div class="language-item">
-        <img src="assets/sublogo.svg" alt="Sparksite Logo"/>
+        <img src="assets/sublogo.svg" alt="Sparksite Logo">
         <div class="language-text">
             <p class="language">German</p>
             <p class="level">Native</p>
         </div>
     </div>
     <div class="language-item">
-        <img src="assets/sublogo.svg" alt="Sparksite Logo"/>
+        <img src="assets/sublogo.svg" alt="Sparksite Logo">
         <div class="language-text">
             <p class="language">English</p>
             <p class="level">Fluent</p>
         </div>
     </div>
     <div class="language-item">
-        <img src="assets/sublogo.svg" alt="Sparksite Logo"/>
+        <img src="assets/sublogo.svg" alt="Sparksite Logo">
         <div class="language-text">
             <p class="language">French</p>
             <p class="level">Intermediate</p>
