--- a/contact.html
+++ b/contact.html
@@ -1,21 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Sparksite</title>
 
-    <!-- CSS  -->
+    <!-- CSS -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-    <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+    <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen">
+    <link href="css/style.css" type="text/css" rel="stylesheet" media="screen">
 </head>
-
-<nav class="nav-bar" role="navigation">
+<body>
+<nav class="nav-bar">
     <div class="nav-wrapper">
         <a id="logo-container" href="index.html" class="brand-logo">
             <img src="assets/sparksite_logo.svg" alt="Sparksite Logo">
-            sparksite</a>
+            sparksite
+        </a>
         <ul class="right hide-on-med-and-down">
             <li><a href="index.html">Home</a></li>
             <li><a href="selina.html">Selina Lanz</a></li>
@@ -34,8 +35,6 @@
         <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
     </div>
 </nav>
-
-<body>
 
 <div class="container">
     <div>
@@ -63,8 +62,7 @@
                 <div class="col-md-12">
                     <div class="form-group">
                         <label class="label" for="message">Message</label>
-                        <textarea class="form-control" name="message" id="message" placeholder="Message"
-                                  rows="4"></textarea>
+                        <textarea class="form-control" name="message" id="message" placeholder="Message" rows="4"></textarea>
                     </div>
                 </div>
                 <div class="col-md-12 button-container">
@@ -81,17 +79,17 @@
             <div class="col l3 s12">
                 <h5 class="white-text">Connect</h5>
                 <ul>
-                    <li><a class="white-text" href="#!">sparksite@gmail.com</a></li>
-                    <li><a class="white-text" href="#!">selinalanz.sparksite@gmail.com</a></li>
-                    <li><a class="white-text" href="#!">urielbrawer.sparksite@gmail.com</a></li>
-                    <li><a class="white-text" href="#!">michellerickenmann.sparksite@gmail.com</a></li>
+                    <li><a class="white-text" href="mailto:sparksite@gmail.com">sparksite@gmail.com</a></li>
+                    <li><a class="white-text" href="mailto:selinalanz.sparksite@gmail.com">selinalanz.sparksite@gmail.com</a></li>
+                    <li><a class="white-text" href="mailto:urielbrawer.sparksite@gmail.com">urielbrawer.sparksite@gmail.com</a></li>
+                    <li><a class="white-text" href="mailto:michellerickenmann.sparksite@gmail.com">michellerickenmann.sparksite@gmail.com</a></li>
                 </ul>
             </div>
         </div>
     </div>
 </footer>
 
-<!--  Scripts-->
+<!-- Scripts -->
 <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 <script src="js/materialize.js"></script>
 <script src="js/init.js"></script>
