--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <li><a href="#">Michelle Rickenmann</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
-        <a href="#" data-target="nav-mobile" class="sidenav-trigger" id="hamburger"><i
+        <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i
                 class="material-icons">menu</i></a>
     </div>
 </nav>
