changed skills to grid

--- a/selina.html
+++ b/selina.html
@@ -53,12 +53,14 @@
 <!-- Skill Section -->
 <section class="skills">
     <h2>skills</h2>
-    <div class="skills-container">
-        <div class="coding">
+    <div class="row">
+        <div class="skills-item col s12 m4">
             <h3>CODING</h3>
-            <p>Java<br>HTML<br>CSS</p>
+            <p>Java</p>
+            <p>HTML</p>
+            <p>CSS</p>
         </div>
-        <div class="software">
+        <div class="skills-item col s12 m4">
             <h3>SOFTWARE</h3>
             <div class="icons">
                 <img src="assets/selina/icons/figma.png" alt="Figma" class="icon">
@@ -66,12 +68,13 @@
                 <img src="assets/selina/icons/photoshop.png" alt="Photoshop" class="icon">
             </div>
         </div>
-        <div class="skills-container">
+        <div class="skills-item col s12 m4">
             <h3>User-Centered Design</h3>
-            <p>UI/UX Design<br>User Research</p>
-
+            <p>UI/UX Design</p>
+            <p>User Research</p>
         </div>
     </div>
+
 </section>
 
 <!-- Projects Section -->
