--- a/selina.html
+++ b/selina.html
@@ -63,9 +63,9 @@
         <div class="skills-item col s12 m4">
             <h3>SOFTWARE</h3>
             <div class="icons">
-                <img src="assets/selina/icons/figma.png" alt="Figma" class="icon">
-                <img src="assets/selina/icons/indesign.png" alt="InDesign" class="icon">
-                <img src="assets/selina/icons/photoshop.png" alt="Photoshop" class="icon">
+                <img src="assets/selina/icons/figma.svg" alt="Figma" class="icon">
+                <img src="assets/selina/icons/indesign.svg" alt="InDesign" class="icon">
+                <img src="assets/selina/icons/photoshop.svg" alt="Photoshop" class="icon">
             </div>
         </div>
         <div class="skills-item col s12 m4">
