added person profile

--- a/contact.html
+++ b/contact.html
@@ -20,16 +20,16 @@
         <ul class="right hide-on-med-and-down">
             <li><a href="index.html">Home</a></li>
             <li><a href="selina.html">Selina Lanz</a></li>
-            <li><a href="#">Uriel Brawer</a></li>
-            <li><a href="#">Michelle Rickenmann</a></li>
+            <li><a href="uriel.html">Uriel Brawer</a></li>
+            <li><a href="michelle.html">Michelle Rickenmann</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
 
         <ul id="nav-mobile" class="sidenav">
             <li><a href="index.html">Home</a></li>
             <li><a href="selina.html">Selina Lanz</a></li>
-            <li><a href="#">Uriel Brawer</a></li>
-            <li><a href="#">Michelle Rickenmann</a></li>
+            <li><a href="uriel.html">Uriel Brawer</a></li>
+            <li><a href="michelle.html">Michelle Rickenmann</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
         <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
