--- a/uriel.html
+++ b/uriel.html
@@ -40,7 +40,7 @@
 <!-- Profile Section -->
 <section class="profil">
 
-    <h1 class="center">Selina Lanz</h1>
+    <h1 class="center">Uriel Brawer</h1>
     <img src="assets/selina/Profilbild.JPG" alt="Profilbild" class="responsive-img">
     <h5 class="center">Exploring creativity, innovation, and new horizons one step at a time!</h5>
     <p class="light">
@@ -206,7 +206,7 @@
             <div class="col l3 s12">
                 <h5>Connect</h5>
                 <h6 class="white-text">Email</h6>
-                <p><a href ="mailto:selinalanz.sparksite@gmail.com">selinalanz.sparksite@gmail.com</a></p>
+                <p><a href ="mailto:urielbrawer.sparksite@gmail.com">urielbrawer.sparksite@gmail.com</a></p>
                 <h6 class="white-text">Phone</h6>
                 <p>+41 123 44 55</p>
             </div>
