--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <ul class="right hide-on-med-and-down">
             <li><a href="index.html">Home</a></li>
             <li><a href="selina.html">Selina Lanz</a></li>
-            <li><a href="#">Uriel Brawer</a></li>
+            <li><a href="uriel.html">Uriel Brawer</a></li>
             <li><a href="#">Michelle Rickenmann</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
@@ -27,7 +27,7 @@
         <ul id="nav-mobile" class="sidenav">
             <li><a href="index.html">Home</a></li>
             <li><a href="selina.html">Selina Lanz</a></li>
-            <li><a href="#">Uriel Brawer</a></li>
+            <li><a href="uriel.html">Uriel Brawer</a></li>
             <li><a href="#">Michelle Rickenmann</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
@@ -79,9 +79,9 @@
         </div>
 
         <div class="center col s12 m6 l4 offset-m3">
-            <a href="#" class="center image_caption_container">
+            <a href="uriel.html" class="center image_caption_container">
                 <span class="caption">Uriel</span>
-                <img class="circle" src="assets/sublogo.svg" alt="Uriel Brawer">
+                <img class="circle" src="assets/uriel/portfolio_profilbild.jpg" alt="Uriel Brawer">
             </a>
         </div>
     </div>
