changes for person profile

--- a/uriel.html
+++ b/uriel.html
@@ -120,20 +120,26 @@
 <!-- Education Section -->
 <section class="education">
     <h2>EDUCATION</h2>
-    <div class="education-item">
-        <img src="assets/sublogo.svg" alt="Sparksite Logo">
-        <span>23</span>
-        <div class="education-text">
-            <p class="course-name">iCompetence</p>
-            <p class="institution-name">FHNW Brugg</p>
+    <div class="row">
+        <div class="col s12 m4">
+            <div class="education-item">
+                <img src="assets/sublogo.svg" alt="Sparksite Logo">
+                <span>23</span>
+                <div class="education-text">
+                    <p class="course-name">iCompetence</p>
+                    <p class="institution-name">FHNW Brugg</p>
+                </div>
+            </div>
         </div>
-    </div>
-    <div class="education-item">
-        <img src="assets/sublogo.svg" alt="Sparksite Logo">
-        <span>22&nbsp;-<br>23</span>
-        <div class="education-text">
-            <p class="course-name">Professional Maturity</p>
-            <p class="institution-name">Berufsschule Langenthal</p>
+        <div class="col s12 m4">
+            <div class="education-item">
+                <img src="assets/sublogo.svg" alt="Sparksite Logo">
+                <span>22&nbsp;-<br>23</span>
+                <div class="education-text">
+                    <p class="course-name">Professional Maturity</p>
+                    <p class="institution-name">Berufsschule Langenthal</p>
+                </div>
+            </div>
         </div>
     </div>
 </section>
@@ -141,12 +147,16 @@
 <!-- Experience Section -->
 <section class="experience">
     <h2>EXPERIENCE</h2>
-    <div class="experience-item">
-        <img src="assets/sublogo.svg" alt="Sparksite Logo">
-        <span>18&nbsp;-<br>20</span>
-        <div class="experience-text">
-            <p class="job-titel">Office clerk</p>
-            <p class="company-name">Marketing & Printing<br>Kuert Druck AG Langenthal</p>
+    <div class="row">
+        <div class="col s12 m5">
+            <div class="experience-item">
+                <img src="assets/sublogo.svg" alt="Sparksite Logo">
+                <span>18&nbsp;-<br>20</span>
+                <div class="experience-text">
+                    <p class="job-titel">Office clerk</p>
+                    <p class="company-name">Marketing & Printing<br>Kuert Druck AG Langenthal</p>
+                </div>
+            </div>
         </div>
     </div>
 </section>
@@ -154,25 +164,33 @@
 <!-- Language Section -->
 <section class="languages">
     <h2>LANGUAGE</h2>
-    <div class="language-item">
-        <img src="assets/sublogo.svg" alt="Sparksite Logo">
-        <div class="language-text">
-            <p class="language">German</p>
-            <p class="level">Native</p>
+    <div class="row">
+        <div class="col s12 m3">
+            <div class="language-item">
+                <img src="assets/sublogo.svg" alt="Sparksite Logo">
+                <div class="language-text">
+                    <p class="language">German</p>
+                    <p class="level">Native</p>
+                </div>
+            </div>
         </div>
-    </div>
-    <div class="language-item">
-        <img src="assets/sublogo.svg" alt="Sparksite Logo">
-        <div class="language-text">
-            <p class="language">English</p>
-            <p class="level">Fluent</p>
+        <div class="col s12 m3">
+            <div class="language-item">
+                <img src="assets/sublogo.svg" alt="Sparksite Logo">
+                <div class="language-text">
+                    <p class="language">English</p>
+                    <p class="level">Fluent</p>
+                </div>
+            </div>
         </div>
-    </div>
-    <div class="language-item">
-        <img src="assets/sublogo.svg" alt="Sparksite Logo">
-        <div class="language-text">
-            <p class="language">French</p>
-            <p class="level">Intermediate</p>
+        <div class="col s12 m3">
+            <div class="language-item">
+                <img src="assets/sublogo.svg" alt="Sparksite Logo">
+                <div class="language-text">
+                    <p class="language">French</p>
+                    <p class="level">Intermediate</p>
+                </div>
+            </div>
         </div>
     </div>
 </section>
@@ -206,7 +224,7 @@
             <div class="col l3 s12">
                 <h5>Connect</h5>
                 <h6 class="white-text">Email</h6>
-                <p><a href ="mailto:urielbrawer.sparksite@gmail.com">urielbrawer.sparksite@gmail.com</a></p>
+                <p><a href="mailto:urielbrawer.sparksite@gmail.com">urielbrawer.sparksite@gmail.com</a></p>
                 <h6 class="white-text">Phone</h6>
                 <p>+41 123 44 55</p>
             </div>
