--- a/michelle.html
+++ b/michelle.html
@@ -41,12 +41,12 @@
 <section class="profil">
 
     <h1 class="center">Michelle Rickenmann</h1>
-    <img src="assets/selina/Profilbild.JPG" alt="Profilbild" class="responsive-img">
-    <h5 class="center">Exploring creativity, innovation, and new horizons one step at a time!</h5>
+    <img src="assets/michelle/cat_image.jpg" alt="Profilbild" class="responsive-img">
+    <h5 class="center">Sleek as a cat, smooth as a whisker!</h5>
     <p class="light">
-        I'm a 24-year-old Bachelor’s student in iCompetence at the FHNW in Brugg.
-        Creative and open-minded, I enjoy exploring new places, and I'm also an active member of a
-        Guggenmusik. In my free time, I love to read and discover new perspectives through books.
+        Hi! My name's Michelle and I am currently doing my Bachelor’s as an iCompetence student at the FHNW in Brugg.
+        I love crafting delightful experiences that make users smile. I am a creative and hardworking student and
+        enjoy making music, drawing and crocheting in my free time.
     </p>
 </section>
 
@@ -65,13 +65,17 @@
             <div class="icons">
                 <img src="assets/selina/icons/figma.svg" alt="Figma" class="icon">
                 <img src="assets/selina/icons/indesign.svg" alt="InDesign" class="icon">
-                <img src="assets/selina/icons/photoshop.svg" alt="Photoshop" class="icon">
+                <img src="assets/michelle/icons/illustrator.svg" alt="Illustrator" class="icon"
+                     style="width: 55px; height: 55px;">
+                <img src="assets/michelle/icons/afterEffects.svg" alt="After Effects" class="icon"
+                     style="width: 55px; height: 55px;">
             </div>
         </div>
         <div class="skills-item col s12 m4">
             <h3>User-Centered Design</h3>
             <p>UI/UX Design</p>
             <p>User Research</p>
+            <p>Wireframing and Prototyping</p>
         </div>
     </div>
 
@@ -82,35 +86,18 @@
     <h2>PROJECTS</h2>
     <!-- Project 1 -->
     <div class="project">
-        <h4 class="project-title">High Society Gölli Club</h4>
+        <h4 class="project-title">Animal Crossing Villager Manager</h4>
         <div class="carousel-container">
             <button class="carousel-arrow prev"><i class="material-icons">chevron_left</i></button>
             <div class="carousel carousel-slider" id="carousel1">
-                <a class="carousel-item" href="#one!"><img src="assets/selina/projects/HSGC/HSGC1.png"
+                <a class="carousel-item" href="#one!"><img src="assets/michelle/projects/ACNH/ACNH1.png"
                                                            alt="Project 1 Image 1"></a>
-                <a class="carousel-item" href="#two!"><img src="assets/selina/projects/HSGC/HSGC2.png"
+                <a class="carousel-item" href="#two!"><img src="assets/michelle/projects/ACNH/ACNH2.png"
                                                            alt="Project 1 Image 2"></a>
-                <a class="carousel-item" href="#three!"><img src="assets/selina/projects/HSGC/HSGC3.png"
+                <a class="carousel-item" href="#three!"><img src="assets/michelle/projects/ACNH/ACNH3.png"
                                                              alt="Project 1 Image 3"></a>
-                <a class="carousel-item" href="#four!"><img src="assets/selina/projects/HSGC/HSGC4.png"
+                <a class="carousel-item" href="#four!"><img src="assets/michelle/projects/ACNH/ACNH4.png"
                                                             alt="Project 1 Image 4"></a>
-            </div>
-            <button class="carousel-arrow next"><i class="material-icons">chevron_right</i></button>
-        </div>
-    </div>
-
-    <!-- Project 2 -->
-    <div class="project">
-        <h4 class="project-title">Guggenmusik Pouseblooser</h4>
-        <div class="carousel-container">
-            <button class="carousel-arrow prev"><i class="material-icons">chevron_left</i></button>
-            <div class="carousel carousel-slider" id="carousel2">
-                <a class="carousel-item" href="#one!"><img src="assets/selina/projects/Pouseblooser/GPL1.png"
-                                                           alt="Project 2 Image 1"></a>
-                <a class="carousel-item" href="#two!"><img src="assets/selina/projects/Pouseblooser/GPL2.png"
-                                                           alt="Project 2 Image 2"></a>
-                <a class="carousel-item" href="#three!"><img src="assets/selina/projects/Pouseblooser/GPL3.png"
-                                                             alt="Project 2 Image 3"></a>
             </div>
             <button class="carousel-arrow next"><i class="material-icons">chevron_right</i></button>
         </div>
@@ -120,20 +107,26 @@
 <!-- Education Section -->
 <section class="education">
     <h2>EDUCATION</h2>
-    <div class="education-item">
-        <img src="assets/sublogo.svg" alt="Sparksite Logo">
-        <span>23</span>
-        <div class="education-text">
-            <p class="course-name">iCompetence</p>
-            <p class="institution-name">FHNW Brugg</p>
+    <div class="row">
+        <div class="col s12 m4">
+            <div class="education-item">
+                <img src="assets/sublogo.svg" alt="Sparksite Logo">
+                <span>23</span>
+                <div class="education-text">
+                    <p class="course-name">iCompetence</p>
+                    <p class="institution-name">FHNW Brugg</p>
+                </div>
+            </div>
         </div>
-    </div>
-    <div class="education-item">
-        <img src="assets/sublogo.svg" alt="Sparksite Logo">
-        <span>22&nbsp;-<br>23</span>
-        <div class="education-text">
-            <p class="course-name">Professional Maturity</p>
-            <p class="institution-name">Berufsschule Langenthal</p>
+        <div class="col s12 m4">
+            <div class="education-item">
+                <img src="assets/sublogo.svg" alt="Sparksite Logo">
+                <span>22&nbsp;-<br>23</span>
+                <div class="education-text">
+                    <p class="course-name">Professional Technical Maturity</p>
+                    <p class="institution-name">Berufsschule Aarau</p>
+                </div>
+            </div>
         </div>
     </div>
 </section>
@@ -141,12 +134,16 @@
 <!-- Experience Section -->
 <section class="experience">
     <h2>EXPERIENCE</h2>
-    <div class="experience-item">
-        <img src="assets/sublogo.svg" alt="Sparksite Logo">
-        <span>18&nbsp;-<br>20</span>
-        <div class="experience-text">
-            <p class="job-titel">Office clerk</p>
-            <p class="company-name">Marketing & Printing<br>Kuert Druck AG Langenthal</p>
+    <div class="row">
+        <div class="col s12 m5">
+            <div class="experience-item">
+                <img src="assets/sublogo.svg" alt="Sparksite Logo">
+                <span>19&nbsp;-<br>22</span>
+                <div class="experience-text">
+                    <p class="job-titel">Chemical Laboratory Assistant</p>
+                    <p class="company-name">Analytical & Synthetic<br>F. Hoffmann-La Roche</p>
+                </div>
+            </div>
         </div>
     </div>
 </section>
@@ -154,25 +151,42 @@
 <!-- Language Section -->
 <section class="languages">
     <h2>LANGUAGE</h2>
-    <div class="language-item">
-        <img src="assets/sublogo.svg" alt="Sparksite Logo">
-        <div class="language-text">
-            <p class="language">German</p>
-            <p class="level">Native</p>
+    <div class="row">
+        <div class="col s12 m3">
+            <div class="language-item">
+                <img src="assets/sublogo.svg" alt="Sparksite Logo">
+                <div class="language-text">
+                    <p class="language">German</p>
+                    <p class="level">Native</p>
+                </div>
+            </div>
         </div>
-    </div>
-    <div class="language-item">
-        <img src="assets/sublogo.svg" alt="Sparksite Logo">
-        <div class="language-text">
-            <p class="language">English</p>
-            <p class="level">Fluent</p>
+        <div class="col s12 m3">
+            <div class="language-item">
+                <img src="assets/sublogo.svg" alt="Sparksite Logo">
+                <div class="language-text">
+                    <p class="language">English</p>
+                    <p class="level">Fluent</p>
+                </div>
+            </div>
         </div>
-    </div>
-    <div class="language-item">
-        <img src="assets/sublogo.svg" alt="Sparksite Logo">
-        <div class="language-text">
-            <p class="language">French</p>
-            <p class="level">Intermediate</p>
+        <div class="col s12 m3">
+            <div class="language-item">
+                <img src="assets/sublogo.svg" alt="Sparksite Logo">
+                <div class="language-text">
+                    <p class="language">Spanish</p>
+                    <p class="level">Intermediate</p>
+                </div>
+            </div>
+        </div>
+        <div class="col s12 m3">
+            <div class="language-item">
+                <img src="assets/sublogo.svg" alt="Sparksite Logo">
+                <div class="language-text">
+                    <p class="language">French</p>
+                    <p class="level">Intermediate</p>
+                </div>
+            </div>
         </div>
     </div>
 </section>
@@ -182,20 +196,20 @@
     <h2>HOBBIES & INTEREST</h2>
     <div class="hobby-icons">
         <div class="hobby">
-            <img src="assets/selina/icons/open-book.png" alt="Reading">
-            <p>Reading</p>
-        </div>
-        <div class="hobby">
-            <img src="assets/selina/icons/sewing-machine.png" alt="Sewing">
-            <p>Sewing</p>
-        </div>
-        <div class="hobby">
-            <img src="assets/selina/icons/skiing.png" alt="Skiing">
-            <p>Skiing</p>
-        </div>
-        <div class="hobby">
             <img src="assets/selina/icons/musical-note.png" alt="Music">
             <p>Music</p>
+        </div>
+        <div class="hobby">
+            <img src="assets/michelle/icons/drawing.svg" alt="Drawing">
+            <p>Drawing</p>
+        </div>
+        <div class="hobby">
+            <img src="assets/michelle/icons/yarn.svg" alt="Crocheting">
+            <p>Crocheting</p>
+        </div>
+        <div class="hobby">
+            <img src="assets/michelle/icons/video.svg" alt="Video Editing">
+            <p>Video Editing</p>
         </div>
     </div>
 </div>
@@ -206,7 +220,8 @@
             <div class="col l3 s12">
                 <h5>Connect</h5>
                 <h6 class="white-text">Email</h6>
-                <p><a href ="mailto:michellerickenmann.sparksite@gmail.com">michellerickenmann.sparksite@gmail.com</a></p>
+                <p><a href="mailto:michellerickenmann.sparksite@gmail.com">michellerickenmann.sparksite@gmail.com</a>
+                </p>
                 <h6 class="white-text">Phone</h6>
                 <p>+41 123 44 55</p>
             </div>
