changes for person profile

--- a/contact.html
+++ b/contact.html
@@ -65,7 +65,7 @@
                         <textarea class="form-control" name="message" id="message" placeholder="Message" rows="4"></textarea>
                     </div>
                 </div>
-                <div class="col-md-12 button-container">
+                <div class="button-container">
                     <input class="button" type="submit" value="Submit">
                 </div>
             </div>
