--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div class="center col s12 m6 l4">
             <a href="michelle.html" class="center image_caption_container">
                 <span class="caption">Michelle</span>
-                <img class="circle" src="assets/sublogo.svg" alt="Michelle Rickenmann">
+                <img class="circle" src="assets/michelle/Profilbild.jpg" alt="Michelle Rickenmann">
             </a>
         </div>
 
