--- a/michelle.html
+++ b/michelle.html
@@ -41,10 +41,10 @@
 <section class="profil">
 
     <h1 class="center">Michelle Rickenmann</h1>
-    <img src="assets/michelle/cat_image.jpg" alt="Profilbild" class="responsive-img">
+    <img src="assets/michelle/Profilbild.jpg" alt="Profilbild" class="responsive-img">
     <h5 class="center">Sleek as a cat, smooth as a whisker!</h5>
     <p class="light">
-        Hi! My name's Michelle and I am currently doing my Bachelor’s as an iCompetence student at the FHNW in Brugg.
+        Hi! My name's Michelle and I am currently doing my Bachelor’s as an iCompetence student at the FHNW in Brugg at 20 years old.
         I love crafting delightful experiences that make users smile. I am a creative and hardworking student and
         enjoy making music, drawing and crocheting in my free time.
     </p>
