--- a/uriel.html
+++ b/uriel.html
@@ -346,7 +346,7 @@
     <h2>EDUCATION</h2>
     <div class="education-item">
         <img src="assets/sublogo.svg" alt="Sparksite Logo">
-        <span>23</span>
+        <span>24</span>
         <div class="education-text">
             <p class="course-name">iCompetence</p>
             <p class="institution-name">FHNW Brugg</p>
@@ -354,10 +354,10 @@
     </div>
     <div class="education-item">
         <img src="assets/sublogo.svg" alt="Sparksite Logo">
-        <span>22&nbsp;-<br>23</span>
+        <span>2021</span>
         <div class="education-text">
-            <p class="course-name">Professional Maturity</p>
-            <p class="institution-name">Berufsschule Langenthal</p>
+            <p class="course-name">Master in Mathematics</p>
+            <p class="institution-name">University of Bern</p>
         </div>
     </div>
 </section>
