uriel profile grid fixed and content in container

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div class="upper-sparkle">
         <img src="assets/sparkle.svg" alt="sparkle icon">
     </div>
-    <div class="text-container">
+    <div class="container text-container">
         <h4 class="header center">Our UI/UX is so user-friendly, even <span class="highlights">your cat</span>
             could figure it out</h4>
     </div>
