cat blinking (start of mouse animation)

--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@
         <img src="assets/sparkle.svg" alt="sparkle icon">
     </div>
     <div class="cat-container">
+        <div class="cat-eyes-container">
+            <div class="eye"></div>
+            <div class="eye slow-eye"></div>
+        </div>
         <img src="assets/cat_head.svg" alt="cat head" id="cat-head">
     </div>
 </div>
