--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
 
 <div class="container">
     <div>
-        <h1 class="center">Let's chat!</h1>
+        <h1 class="contact-center">Let's chat!</h1>
         <form method="POST" id="contact-form" name="contact-form" class="contact-form d-flex">
             <div class="row">
                 <div class="col-md-12">
