--- a/selina.html
+++ b/selina.html
@@ -72,6 +72,7 @@
             <h3>User-Centered Design</h3>
             <p>UI/UX Design</p>
             <p>User Research</p>
+            <p>Wireframing and Prototyping</p>
         </div>
     </div>
 
