--- a/uriel.html
+++ b/uriel.html
@@ -42,120 +42,132 @@
 
     <h1 class="center">Uriel Brawer</h1>
     <img src="assets/uriel/portfolio_profilbild.jpg" alt="Profilbild" class="responsive-img">
-    <h5 class="center container">Exploring creativity, innovation, and new horizons one step at a time!</h5>
+    <h5 class="center container">Innovation is default</h5>
     <p class="light container">
         I'm a 31-year-old Bachelor’s student in iCompetence at the FHNW in Brugg.
         Solving Puzzles and finding inovative solutions is my happy place. When not talking to my duck-friend on my desk, I'm outdoors riding my bike or lying in the shade of a tree and thinking about riding my bike.
     </p>
 </section>
 
-<div class="grid-container">
+
 <!-- Skill Section -->
-    <section class="skills">
-        <h2>skills</h2>
-        <div class="row">
-            <div class="skills-item col s12 m4">
-                <h3>CODING</h3>
-                <p>Java, HTML, CSS, R, sql</p>
+<section class="skills">
+    <h2>skills</h2>
+    <div class="row">
+        <div class="skills-item col s12 m4">
+            <h3>CODING</h3>
+            <p>Java, HTML, CSS, R, sql</p>
+        </div>
+        <div class="skills-item col s12 m4">
+            <h3>SOFTWARE</h3>
+            <div class="icons">
+                <img src="assets/selina/icons/figma.svg" alt="Figma" class="icon">
             </div>
-            <div class="skills-item col s12 m4">
-                <h3>SOFTWARE</h3>
-                <div class="icons">
-                    <img src="assets/selina/icons/figma.svg" alt="Figma" class="icon">
+        </div>
+        <div class="skills-item col s12 m4">
+            <h3>User-Centered Design</h3>
+            <p>UI/UX Design</p>
+            <p>User Research</p>
+        </div>
+    </div>
+
+</section>
+
+<!-- Projects Section -->
+<section class="projects">
+    <h2>PROJECTS</h2>
+    <!-- Project 1 -->
+    <div class="project">
+        <h4 class="project-title">TBD</h4>
+        <div class="carousel-container">
+            <button class="carousel-arrow prev"><i class="material-icons">chevron_left</i></button>
+            <div class="carousel carousel-slider" id="carousel1">
+                <a class="carousel-item" href="#one!"><img src="assets/uriel/projects/placeholder.png"
+                                                        alt="Project 1 Image 1"></a>
+                <a class="carousel-item" href="#one!"><img src="assets/uriel/projects/placeholder.png"
+                                                        alt="Project 1 Image 1"></a>
+            </div>
+            <button class="carousel-arrow next"><i class="material-icons">chevron_right</i></button>
+        </div>
+    </div>
+</section>
+
+<!-- Education Section -->
+<section class="education">
+    <h2>EDUCATION</h2>
+    <div class="row">
+        <div class="col s12 m6">
+            <div class="education-item">
+                <img src="assets/sublogo.svg" alt="Sparksite Logo">
+                <span>24</span>
+                <div class="education-text">
+                    <p class="course-name">iCompetence</p>
+                    <p class="institution-name">FHNW Brugg</p>
                 </div>
             </div>
-            <div class="skills-item col s12 m4">
-                <h3>User-Centered Design</h3>
-                <p>UI/UX Design</p>
-                <p>User Research</p>
-            </div>
         </div>
-
-    </section>
-
-    <!-- Projects Section -->
-    <section class="projects">
-        <h2>PROJECTS</h2>
-        <!-- Project 1 -->
-        <div class="project">
-            <h4 class="project-title">TBD</h4>
-            <div class="carousel-container">
-                <button class="carousel-arrow prev"><i class="material-icons">chevron_left</i></button>
-                <div class="carousel carousel-slider" id="carousel1">
-                    <a class="carousel-item" href="#one!"><img src="assets/uriel/projects/placeholder.png"
-                                                            alt="Project 1 Image 1"></a>
-                    <a class="carousel-item" href="#one!"><img src="assets/uriel/projects/placeholder.png"
-                                                            alt="Project 1 Image 1"></a>
+        <div class="col s12 m6">
+            <div class="education-item">
+                <img src="assets/sublogo.svg" alt="Sparksite Logo">
+                <span>14&nbsp;-<br>21</span>
+                <div class="education-text">
+                    <p class="course-name">Msc. in Mathematics</p>
+                    <p class="institution-name">University of Bern</p>
                 </div>
-                <button class="carousel-arrow next"><i class="material-icons">chevron_right</i></button>
-            </div>
-        </div>
-    </section>
-
-    <!-- Education Section -->
-    <section class="education-new">
-    <div class="tmp container">
-        <h2>EDUCATION</h2>
-        <div class="education-item">
-            <img src="assets/sublogo.svg" alt="Sparksite Logo">
-            <span>24</span>
-            <div class="education-text">
-                <p class="course-name">iCompetence</p>
-                <p class="institution-name">FHNW Brugg</p>
-            </div>
-        </div>
-        <div class="education-item">
-            <img src="assets/sublogo.svg" alt="Sparksite Logo">
-            <span>14&nbsp;-<br>21</span>
-            <div class="education-text">
-                <p class="course-name">Msc. in Mathematics</p>
-                <p class="institution-name">University of Bern</p>
             </div>
         </div>
     </div>
-    </section>
+</section>
 
-    <!-- Experience Section -->
-    <section class="experience-new">
-    <div class="container">
-        <h2>EXPERIENCE</h2>
-        <div class="experience-item">
-            <img src="assets/sublogo.svg" alt="Sparksite Logo">
-            <span>22&nbsp;-<br> ... </span>
-            <div class="experience-text">
-                <p class="job-titel">Mathematician, Business Analyst</p>
-                <p class="company-name">SBB CFF FFS</p>
+<!-- Experience Section -->
+<section class="experience">
+    <h2>EXPERIENCE</h2>
+    <div class="row">
+        <div class="col s12 m5">
+            <div class="experience-item">
+                <img src="assets/sublogo.svg" alt="Sparksite Logo">
+                <span>22&nbsp;-<br> ... </span>
+                <div class="experience-text">
+                    <p class="job-titel">Mathematician, Business Analyst</p>
+                    <p class="company-name">SBB CFF FFS</p>
+                </div>
             </div>
         </div>
     </div>
-    </section>
+</section>
 
 <!-- Language Section -->
 <section class="languages">
-<div class="container">
     <h2>LANGUAGE</h2>
-    <div class="language-item">
-        <img src="assets/sublogo.svg" alt="Sparksite Logo">
-        <div class="language-text">
-            <p class="language">German</p>
-            <p class="level">Native</p>
+    <div class="row">
+        <div class="col s12 m4">
+            <div class="language-item">
+                <img src="assets/sublogo.svg" alt="Sparksite Logo">
+                <div class="language-text">
+                    <p class="language">German</p>
+                    <p class="level">Native</p>
+                </div>
+            </div>
+        </div>
+        <div class="col s12 m4">
+            <div class="language-item">
+                <img src="assets/sublogo.svg" alt="Sparksite Logo">
+                <div class="language-text">
+                    <p class="language">English</p>
+                    <p class="level">Fluent</p>
+                </div>
+            </div>
+        </div>
+        <div class="col s12 m4">
+            <div class="language-item">
+                <img src="assets/sublogo.svg" alt="Sparksite Logo">
+                <div class="language-text">
+                    <p class="language">French</p>
+                    <p class="level">Intermediate</p>
+                </div>
+            </div>
         </div>
     </div>
-    <div class="language-item">
-        <img src="assets/sublogo.svg" alt="Sparksite Logo">
-        <div class="language-text">
-            <p class="language">English</p>
-            <p class="level">Fluent</p>
-        </div>
-    </div>
-    <div class="language-item">
-        <img src="assets/sublogo.svg" alt="Sparksite Logo">
-        <div class="language-text">
-            <p class="language">French</p>
-            <p class="level">Intermediate</p>
-        </div>
-    </div>
-</div>
 </section>
 
 <!-- Hobbies & Interest Section -->
@@ -176,7 +188,7 @@
         </div>
     </div>
 </div>
-</div> <!-- end grid container -->
+
 
 <footer class="page-footer">
     <div class="container">
