--- a/index.html
+++ b/index.html
@@ -107,10 +107,10 @@
             <div class="col l3 s12">
                 <h5 class="white-text">Connect</h5>
                 <ul>
-                    <li><a class="white-text" href="#!">sparksite@gmail.com</a></li>
-                    <li><a class="white-text" href="#!">selinalanz.sparksite@gmail.com</a></li>
-                    <li><a class="white-text" href="#!">urielbrawer.sparksite@gmail.com</a></li>
-                    <li><a class="white-text" href="#!">michellerickenmann.sparksite@gmail.com</a></li>
+                    <li><a class="white-text" href="mailto:sparksite@gmail.com">sparksite@gmail.com</a></li>
+                    <li><a class="white-text" href="mailto:selinalanz.sparksite@gmail.com">selinalanz.sparksite@gmail.com</a></li>
+                    <li><a class="white-text" href="mailto:urielbrawer.sparksite@gmail.com">urielbrawer.sparksite@gmail.com</a></li>
+                    <li><a class="white-text" href="mailto:michellerickenmann.sparksite@gmail.com">michellerickenmann.sparksite@gmail.com</a></li>
                 </ul>
             </div>
         </div>
