--- a/michelle.html
+++ b/michelle.html
@@ -43,7 +43,7 @@
     <h1 class="center">Michelle Rickenmann</h1>
     <img src="assets/michelle/Profilbild.jpg" alt="Profilbild" class="responsive-img">
     <h5 class="center">Sleek as a cat, smooth as a whisker!</h5>
-    <p class="light">
+    <p class="light container">
         Hi! My name's Michelle and I am currently doing my Bachelor’s as an iCompetence student at the FHNW in Brugg at 20 years old.
         I love crafting delightful experiences that make users smile. I am a creative and hardworking student and
         enjoy making music, drawing and crocheting in my free time.
@@ -111,7 +111,7 @@
         <div class="col s12 m4">
             <div class="education-item">
                 <img src="assets/sublogo.svg" alt="Sparksite Logo">
-                <span>23</span>
+                <span>23 -<br>now</span>
                 <div class="education-text">
                     <p class="course-name">iCompetence</p>
                     <p class="institution-name">FHNW Brugg</p>
