--- a/selina.html
+++ b/selina.html
@@ -43,7 +43,7 @@
     <h1 class="center">Selina Lanz</h1>
     <img src="assets/selina/Profilbild.JPG" alt="Profilbild" class="responsive-img">
     <h5 class="center">Exploring creativity, innovation, and new horizons one step at a time!</h5>
-    <p class="light">
+    <p class="light container">
         I'm a 24-year-old Bachelor’s student in iCompetence at the FHNW in Brugg.
         Creative and open-minded, I enjoy exploring new places, and I'm also an active member of a
         Guggenmusik. In my free time, I love to read and discover new perspectives through books.
@@ -125,7 +125,7 @@
         <div class="col s12 m4">
             <div class="education-item">
                 <img src="assets/sublogo.svg" alt="Sparksite Logo">
-                <span>23</span>
+                <span>23 -<br>now</span>
                 <div class="education-text">
                     <p class="course-name">iCompetence</p>
                     <p class="institution-name">FHNW Brugg</p>
