--- a/uriel.html
+++ b/uriel.html
@@ -56,7 +56,11 @@
     <div class="row">
         <div class="skills-item col s12 m4">
             <h3>CODING</h3>
-            <p>Java, HTML, CSS, R, sql</p>
+            <p>Java</p>
+            <p>HTML</p>
+            <p>CSS</p>
+            <p>R</p>
+            <p>SQL</p>
         </div>
         <div class="skills-item col s12 m4">
             <h3>SOFTWARE</h3>
@@ -126,7 +130,7 @@
         <div class="col s12 m5">
             <div class="experience-item">
                 <img src="assets/sublogo.svg" alt="Sparksite Logo">
-                <span>22&nbsp;-<br> ... </span>
+                <span>22&nbsp;-<br>now</span>
                 <div class="experience-text">
                     <p class="job-titel">Mathematician, Business Analyst</p>
                     <p class="company-name">SBB CFF FFS</p>
